Fixed the sidebar from not working on Firefox
On Firefox the Javascript loads before the SVG object does preventing the eventlistener from ever triggering.

The fix was to wait for the SVG to load then add the event listener.

--- a/CSS/logo.css
+++ b/CSS/logo.css
@@ -15,15 +15,16 @@
 	margin-bottom: 2rem;	
 }
 .logo-hex {
-  position: relative;
-  display: inline-block;
-  cursor: pointer; /* Allows the event listener for objects to work */
+  	position: relative;
+  	display: inline-block;
+  	cursor: pointer; /* Allows the event listener for objects to work */
 }
 
 #logo{
 	width: 100px;
 	height: 100px;
 	pointer-events: none; /* Allows the event listener for objects to work */
+	will-change: transform;
 }
 
 .logo-hex-underline:hover {
